# freateoj-buildwiki

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  wiki.py
src/: build.rs  db.rs  main.rs  server.rs  svg.rs
src/gui/: app.rs  mod.rs
