[package]
name = "freateoj-buildwiki"
version = "0.1.0"
edition = "2021"
description = "Static wiki builder - generates HTML from SQLite via Markdown"
license = "MIT"

[[bin]]
name = "freateoj-wiki"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
pulldown-cmark = "0.13"
tiny_http = "0.12"
resvg = "0.47"
tiny-skia = "0.12"
ico = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
